* Temporary commit to be able to test new focus behaviour, see #7280.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41264 a95241bf-73f2-0310-859d-f6bbb57e9c96